--- a/scratch.tex
+++ b/scratch.tex
@@ -237,27 +237,22 @@ We now introduce the curriculum learning algorithm utilizing the exploration pri
     \label{alg:curr_rmax}
 \begin{algorithmic}[1]
     \Require MDP $M = (\mathcal{S}, \mathcal{A}, H, \mathbb{P}, R, s_0)$, $\epsilon > 0$, $\delta \leq 1$, $R_{max} > 0$ and $\mathcal{M} = \{M_L: L \in \mathcal{L}\}$.
-    \State Initialize $L_0 = (\mathcal{S} \times [H]) \setminus \{(s_0, 1)\}$; $M_0 = M_{L_0}$; $\Phi_0 = \{\bar\pi_0\}$ for $\bar\pi_0$ being uniformly random policy; $(\bar s_0, \bar h_0) = (s_0, 1)$.
+    \State Initialize $L_0 = (\mathcal{S} \times [H]) \setminus \{(s_0, 1)\}$; $M_0 = M_{L_0}$; $\bar\pi_0$ being uniformly random policy; $(\bar s_0, \bar h_0) = (s_0, 1)$.
+    \State \(\mathcal{H} \gets \{\}\)
     \For{$t = 1, \dots, S \times H$}
-        \State Let $\pi_t =$ mixture of $\Phi_{t-1}$ with $\epsilon$-greedy exploration.
-        \State $\mathcal{H}_t = \{\}$.
         \For{$i = 1, \ldots, K_1$}
-            \State Run $\pi_t$ on $M_{t-1}$ and add the trajectory to $\mathcal{H}_t$.
-            % \If{$N_{\bar s, \bar h}(\mathcal{H}) \geq K_3$ for all $(s, h \in (\mathcal{S} \times [H]) \setminus L_{t-1})$}
-            %     \State \textbf{break}
-            % \EndIf
+            \State Run \(\overline{\pi_{t-1}}\) with \(\epsilon\)-greedy on $M_{t-1}$ and add the trajectory to $\mathcal{H}$ for states in \(L \setminus L_{t-1}\).
         \EndFor
-        \State Call offline policy optimization on $\mathcal{H}_t$ that returns $\bar \pi_{t}$, a near-optimal policy for $M_{t-1}$.
-        \If {\# $\bar \pi_t$ will visit $L_{t-1}$ with probability at least $p$.}
-            \State Set  $\bar s_t, \bar h_t$ to be the state in \(L\) with the highest probability of being reached.
+        \State Call offline policy optimization on $\mathcal{H}$ that returns $\bar \pi_{t}$, a near-optimal policy for $M_{t-1}$.
+        \State \(\mathcal{H}_t \gets \{\}\)
+        \For{$i = 1, \ldots, K_2$}
+            \State Run \(\pi_t\) on \(M\) and add trajectory to \(\mathcal{H}_t\)
+        \EndFor
+        \If {$\exists (s, h) \in L : (s, h)$ is reached by at least $1$ trajectory in $\mathcal{H}_t$}
+            \State \((\overline{s}_t, \overline{h}_t) \gets\) most visited state in \(L_{t-1}\)
         \Else
             \State \textbf{break}
         \EndIf
-        % \If{$i = K_1$}
-        %     \State Output $\bar \pi_t$; BREAK \quad              \textit{\# Found a near-optimal policy}
-        % \EndIf
-        \State $\Phi_t = \Phi_{t-1} \cup \{\bar \pi_{t-1}\}$.
-        %\State Run $\pi_t$ on $M_{t-1}$ until some state $(\bar s_t, \bar h_t) \in L_{t-1}$ is visited $K_3$ times and $(\bar s_{t-1}, \bar h_{t-1})$ is visited $K_2$ times. The trajectories are stored in $\mathcal{H}_t$.
         \State $L_t = L_{t-1} / (\bar s_t, \bar h_t)$; $M_t = M_{L_t}$.
     \EndFor
     \State Output $\bar \pi_t$.
@@ -267,10 +262,10 @@ We now introduce the curriculum learning algorithm utilizing the exploration pri
 We now introduce the main theoretical guarantee for the above algorithm.
 
 \begin{thm}[]
-    Given a nonstationery finite horizon MDP \(M\) with fixed initial state, an \(\epsilon > 0\), a \(0 \leq \delta \leq 1\), the maximum reward for \(M\), \(R_{max}\) and the \(\mathcal{M}\) corresponding to \(M\), then running algorithm \ref{alg:curr_rmax} with \(K_1 = \_, K_2 = \_\), the algorithm will output an \(\epsilon\)-optimal policy with probability \(1 - \delta\). Furthermore, the sample complexity of the algorithm is \(\_\).
+    Given a nonstationery finite horizon MDP \(M\) with fixed initial state, an \(\epsilon > 0\), a \(0 \leq \delta \leq 1\), the maximum reward for \(M\), \(R_{max}\) and the \(\mathcal{M}\) corresponding to \(M\), then running algorithm \ref{alg:curr_rmax} with \(K_1 = \frac{-\ln(\frac{\delta}{2S})}{2(\frac{\epsilon}{SH^2 R_{max}})^2}A \frac{\ln(1 - \delta^{\frac{1}{\frac{-\ln(\frac{\delta}{2S})}{2(\frac{\epsilon}{SH^2 R_{max}})^2} A}})}{\ln(\frac{\frac{\epsilon}{HR_{max}} \sigma}{SAH})}, K_2 = \frac{-2S^2H^2 \ln(\delta)}{(\frac{\epsilon}{HR_{max}})^2}\), the algorithm will output an \(\epsilon\)-optimal policy with probability \(1 - \delta\). Furthermore, the sample complexity of the algorithm is \(SH(K_1 + K_2)\).
 \end{thm}
 
-We start off with some preliminary results about estimating and MDP, which will lead to a result justifying \(K_1\) in line 5.
+We start off with some preliminary results about estimating the MDP, which will lead to a result justifying \(K_1\) in line 5.
 
 \begin{thm}[]
     Let \(M\) be a MDP and let \(M'\) be another MDP such that \(||P_{M} - P_{M'}||_{\infty} < \frac{\epsilon}{SH^2R_{max}}\). Then for all policies \(\pi\),
@@ -296,24 +291,20 @@ We start off with some preliminary results about estimating and MDP, which will 
 
 
 \begin{lemma}[Justification for \(K_1\) (loose bound)]
-    Fix \(0 \leq \delta \leq 1\). In order to collect \(n\) samples for each state \((s, h)\) with probability \(1-\delta\) or more, we need to set \(K_1 = nSAH \frac{\ln(1 - \delta^{\frac{1}{nSAH}})}{\ln(\frac{p\epsilon (1-\epsilon)^{H}}{SAH^2})}\).
+    Fix \(0 \leq \delta \leq 1\). In order to collect \(n\) samples for each action played at state \((\overline{s}_t, \overline{h}_t)\) using \(\overline{\pi_{t-1}}\) in the loop in line 4 with probability \(1-\delta\) or more, we need to set \(K_1 = nA \frac{\ln(1 - \delta^{\frac{1}{nA}})}{\ln(\frac{p\epsilon}{SAH})}\).
 \end{lemma}
 
 \begin{proof}[Proof]
-    The number of trajectories needed to be collected is upper bounded by the case where \(L\) is empty, so we consider this case only in this proof. We first calculate the probability of the policy \(\pi_t\) from line 6 for reaching any particular state in \((\mathcal{S} \times [H]) \setminus L_t\) and choosing some action in \(\mathcal{A}\). We denote the state to be \((s, h)\) and the action as \(a\). In order to reach \((s, h)\) we must first choose the policy in \(\Phi\) which reaches \((s, h)\) with guaranteed probability. From line 9 and pigeonhole principle, there exists such a policy that reaches \((s, h)\) with probability at least \(\frac{p}{SH}\). Furthermore we have \(|\Phi| \leq SH\). So the probability of reaching \((s, h)\) is at least \(\frac{p(1-\epsilon)^{H}}{SH^2}\). Next, the probability of reaching a particular action from \((s, h)\) is \(\frac{\epsilon}{A}\). Thus, the probability of reaching a specific state and performing a specific action on that state is
-    \[\frac{\epsilon (1-\epsilon)^{H}}{SAH^2}.\]
-    We want to visit each state and action \(n\) times. In this case this is equivalent to visiting \((s, h)\) and performing action \(a\) \(nSAH\) times. Let \(k\) be the proposed number of trajectories to collect. Let \(X_i, 1 \leq i \leq k\) be a Bernoulli random variable that corresponds to a trajectory visiting \((s, h)\) and performing action \(a\) on it. Then we have
-    \[P(\sum_{i=1}^{k} X_i \geq nSAH) \geq \prod_{j=1}^{nSAH} P(\sum_{i=1}^{\frac{k}{nSAH}} X_{j*i} \geq 1)\]
-    \[= \prod_{j=1}^{nSAH} (1 - P(\sum_{i=1}^{\frac{k}{nSAH}} X_{j*i} = 0)\]
-    \[= (1 - (\frac{p\epsilon (1-\epsilon)^{H}}{SAH^2})^{\frac{k}{nSAH}})^{nSAH} \geq \delta\]
-    \[\Rightarrow 1 - (\frac{p\epsilon (1-\epsilon)^{H}}{SAH^2})^{\frac{k}{nSAH}} \geq \delta^{\frac{1}{nSAH}}\]
-    \[\Rightarrow 1 - \delta^{\frac{1}{nSAH}} \geq (\frac{p\epsilon (1-\epsilon)^{H}}{SAH^2})^{\frac{k}{nSAH}}\]
-    \[\Rightarrow \ln(1 - \delta^{\frac{1}{nSAH}}) \geq \frac{k}{nSAH} \ln(\frac{p\epsilon (1-\epsilon)^{H}}{SAH^2})\]
-    \[\Rightarrow k \geq nSAH \frac{\ln(1 - \delta^{\frac{1}{nSAH}})}{\ln(\frac{p\epsilon (1-\epsilon)^{H}}{SAH^2})}\]
-\end{proof}
-
-\begin{proof}[Proof (tighter bound using induction)]
-    
+    The probability of \(\overline{\pi_{t-1}}\) of reaching the state \((\overline{s_t}, \overline{h_t})\) is at least \(\frac{p}{SH}\) with probability \(1 - \delta\). The probability of playing any specific action from \((\overline{s_t}, \overline{h_t})\) given that \((\overline{s_t}, \overline{h_t})\) is reached is \(\frac{\epsilon}{A}\). Thus the probability of reaching \((\overline{s_t}, \overline{h_t})\) and playing a specific action \(a\) is
+    \[\frac{\epsilon p}{SAH}.\]
+    We want to play each action at least \(n\) times. In this case, the probability for this is equivalent to playing a single action \(nA\) times. Let \(k\) be the proposed number of trajectories to collect. Let \(X_i, 1 \leq i \leq k\) be a Bernoulli random variable that cooresponds to a trajectory visiting \((s, h)\) and performing action \(a\) on it. Then we have
+    \[P(\sum_{i=1}^{k}X_i \geq nA ) \geq \prod_{j=1}^{nA} P(\sum_{i=1}^{\frac{k}{nA}} X_{j*i} \geq 1)\]
+    \[= \prod_{j=1}^{nA} (1 - P(\sum_{i=1}^{\frac{k}{nA}}X_{j*i} = 0))\]
+    \[= (1 - (\frac{p\epsilon}{SAH})^{\frac{k}{nA}})^{nA} \geq \delta\]
+    \[\Rightarrow 1 - (\frac{p\epsilon}{SAH})^{\frac{k}{nA}} \geq \delta^{\frac{1}{nA}}\]
+    \[\Rightarrow 1 - \delta^{\frac{1}{nA}} \geq (\frac{p\epsilon}{SAH})^{\frac{k}{nA}}\]
+    \[\Rightarrow \ln(1 - \delta^{\frac{1}{nA}}) \geq \frac{k}{nA} \ln(\frac{p\epsilon}{SAH})\]
+    \[\Rightarrow k \geq nA \frac{\ln(1 - \delta^{\frac{1}{nA}})}{\ln(\frac{p\epsilon}{SAH})}\]
 \end{proof}
 
 
@@ -357,22 +348,45 @@ Next we prove a lemma showing that if the policy in line 9 is not already an opt
     Which is the same statement as (1).
 \end{proof}
 
+\begin{lemma}[(Justification for \(K_2\))]
+    In the loop in line 9, to guarantee that the resulting \(\overline{\pi_t}\) would have a probability of reaching \(\overline{s_t}, \overline{h_t}\) of more than \(\frac{p}{2SH}\), we need \(K_2 \geq \frac{-2S^2H^2 \ln(\delta)}{p^2}\).
+\end{lemma}
+
+\begin{proof}[Proof]
+    Let \(k\) be the number of times that the for loop in line 9 is run. Let \((s, h) \in L_{i-1}\) Define the indicator random variable \(X_i\) as follows:
+    \[X_i = \begin{cases}
+        1 & \text{ trajectory passes through } (s, h) \\
+        0 & \text{ otherwise } \\
+    \end{cases}.\]
+
+    Now define \(S_k = \sum_{i=1}^k \frac{X_i}{k}\). Then we have \(E[S_k] = P(\text{trajectory passes through } (s, h))\). By Hoeffding's inequality we have that
+    \[P(E[S_k] - S_k \geq \frac{p}{2SH}) \leq \exp(\frac{-2(\frac{p}{2SH})^2}{k (\frac{1}{k})^2}) \leq \delta\]
+    \[\Rightarrow \frac{-kp^2}{2S^2H^2} \leq \ln(\delta)\]
+    \[\Rightarrow \frac{-kp^2}{\ln(\delta)} \leq 2S^2 H^2\]
+    \[\Rightarrow -k \leq \frac{2S^2H^2 \ln(\delta)}{p^2}\]
+    \[\Rightarrow k \geq \frac{-2S^2H^2 \ln(\delta)}{p^2}\]
+\end{proof}
+
 \begin{proof}[Proof (of main theorem)]
-    By the above lemma, for any \(L \subset \mathcal{S} \times [H]\) we either have that the optimal policy for \(M_L\) is \(\epsilon\)-optimal for \(M\) or a state in \(L\) will  be played with probability of at least \(\frac{\epsilon}{HR_{max}}\). So we set \(p = \frac{\epsilon}{HR_{max}}\).
+    By the above lemma, for any \(L \subset \mathcal{S} \times [H]\) we either have that the optimal policy for \(M_L\) is \(\epsilon\)-optimal for \(M\) or a state in \(L\) will  be played with probability of at least \(\frac{\epsilon}{HR_{max}}\) using the current optimal policy. So we set \(p = \frac{\epsilon}{HR_{max}}\).
 
     Next, let \(M_L'\) be our estimated MDP for \(M_L\). We need \(||P_{M_L} - P_{M_{L}'}||_{\infty} < \frac{\epsilon}{SH^2 R_{max}}\) which means that for each state we need (here we use \(\sigma\)-greedy)
     \[n \geq \frac{-\ln(\frac{\delta}{2S})}{2(\frac{\epsilon}{SH^2 R_{max}})^2}\]
     samples. In order to satisfy this amount for every state in \(M_L\) that is not in \(L\), and for every action played on each state, we would need
-    \[K_1 = nSAH \frac{\ln(1 - \delta^{\frac{1}{nSAH}})}{\ln(\frac{p\sigma (1 - \sigma)^{H}}{SAH^2})} = \frac{-\ln(\frac{\delta}{2S})}{2(\frac{\epsilon}{SH^2 R_{max}})^2} SAH \frac{\ln(1 - \delta^{\frac{1}{\frac{-\ln(\frac{\delta}{2S})}{2(\frac{\epsilon}{SH^2 R_{max}})^2} SAH}})}{\ln(\frac{\frac{\epsilon}{HR_{max}} \sigma (1 - \sigma)^{H}}{SAH^2})}\]
-    total samples. Since we need this number of samples for each iteration, the total sample complexity of the algorithm is
-    \[\frac{-\ln(\frac{\delta}{2S})}{2(\frac{\epsilon}{SH^2 R_{max}})^2} S^2AH^2 \frac{\ln(1 - \delta^{\frac{1}{\frac{-\ln(\frac{\delta}{2S})}{2(\frac{\epsilon}{SH^2 R_{max}})^2} SAH}})}{\ln(\frac{\frac{\epsilon}{HR_{max}} \sigma (1 - \sigma)^{H}}{SAH^2})}\]
+    \[K_1 = nA \frac{\ln(1 - \delta^{\frac{1}{A}})}{\ln(\frac{p\sigma}{SAH})} = \frac{-\ln(\frac{\delta}{2S})}{2(\frac{\epsilon}{SH^2 R_{max}})^2}A \frac{\ln(1 - \delta^{\frac{1}{\frac{-\ln(\frac{\delta}{2S})}{2(\frac{\epsilon}{SH^2 R_{max}})^2} A}})}{\ln(\frac{\frac{\epsilon}{HR_{max}} \sigma}{SAH})}\]
+    total samples. Since we need this number of samples for each iteration, the total sample complexity of the loop in line 4 is
+    \[\frac{-\ln(\frac{\delta}{2S})}{2(\frac{\epsilon}{SH^2 R_{max}})^2}SAH \frac{\ln(1 - \delta^{\frac{1}{\frac{-\ln(\frac{\delta}{2S})}{2(\frac{\epsilon}{SH^2 R_{max}})^2} A}})}{\ln(\frac{\frac{\epsilon}{HR_{max}} \sigma}{SAH})}\]
+
+    Next we have that
+    \[K_2 \geq \frac{-2S^2H^2 \ln(\delta)}{p^2} = \frac{-2S^2H^2 \ln(\delta)}{(\frac{\epsilon}{HR_{max}})^2}.\]
+    Since there are \(SH\) iterations at most, the total sample complexity of the loop in line 9 is
+    \[\frac{-2S^3H^3 \ln(\delta)}{(\frac{\epsilon}{HR_{max}})^2}\]
+
+    The total sample complexity is therefore
+    \[\frac{-2S^3H^3 \ln(\delta)}{(\frac{\epsilon}{HR_{max}})^2} + \frac{-\ln(\frac{\delta}{2S})}{2(\frac{\epsilon}{SH^2 R_{max}})^2}SAH \frac{\ln(1 - \delta^{\frac{1}{\frac{-\ln(\frac{\delta}{2S})}{2(\frac{\epsilon}{SH^2 R_{max}})^2} A}})}{\ln(\frac{\frac{\epsilon}{HR_{max}} \sigma}{SAH})}\]
 
     The algorithm is optimal because the resulting \(M_L\) would have a value function \(\epsilon\)-close to \(M\)'s value function, and the estimated \(M_{L}'\) would have a value function \(\epsilon\)-close to \(M_L\)'s value function, all with probability \(1-\delta\).
 \end{proof}
-
-
-
-
 
 
 \end{document}
